--- a/samples/msal-angular-v2-samples/angular10-sample-app/package.json
+++ b/samples/msal-angular-v2-samples/angular10-sample-app/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "jest",
+    "test:e2e": "jest",
     "install:local": "npm install ../../../lib/msal-angular/dist ../../../lib/msal-browser",
     "install:published": "npm install @azure/msal-angular@latest @azure/msal-browser@latest"
   },
@@ -41,6 +41,7 @@
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "jest": "^27.0.4",
+    "jest-junit": "^16.0.0",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
