--- a/samples/msal-node-samples/silent-flow/package.json
+++ b/samples/msal-node-samples/silent-flow/package.json
@@ -6,8 +6,9 @@
   "private": true,
   "scripts": {
     "start": "node index.js",
-    "test": "jest",
+    "test:e2e": "jest",
     "test:agc": "jest --testMatch [ '**/test/**/*agc*.spec.ts' ]",
+    "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
     "install:local": "npm install ../../../lib/msal-node"
   },
   "author": "Microsoft",
@@ -20,6 +21,7 @@
     "express-promise-router": "^4.0.1"
   },
   "devDependencies": {
-    "jest": "^27.0.4"
+    "jest": "^27.0.4",
+    "jest-junit": "^16.0.0"
   }
 }
