Add main fields for common and node

--- a/lib/msal-browser/package.json
+++ b/lib/msal-browser/package.json
@@ -23,7 +23,7 @@
   ],
   "type": "module",
   "sideEffects": false,
-  "main": "./lib/msal-browser.js",
+  "main": "./lib/msal-browser.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
