--- a/lib/msal-common/package.json
+++ b/lib/msal-common/package.json
@@ -22,6 +22,7 @@
     "oauth"
   ],
   "sideEffects": false,
+  "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
