--- a/lib/msal-node/package.json
+++ b/lib/msal-node/package.json
@@ -22,6 +22,7 @@
     "oauth"
   ],
   "type": "module",
+  "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
