--- a/samples/msal-node-samples/Managed-Identity/Imds/package.json
+++ b/samples/msal-node-samples/Managed-Identity/Imds/package.json
@@ -4,10 +4,10 @@
   "description": "Managed Identity for Imds",
   "scripts": {
     "build": "npx tsc",
-    "start:app": "npm run build && node build/index.js"
+    "start:app": "npm run build && node dist/index.js"
   },
   "dependencies": {
-    "@azure/msal-node": "^2.7.0",
+    "@azure/msal-node": "^2.11.0",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
