--- a/.pipelines/3p-e2e.yml
+++ b/.pipelines/3p-e2e.yml
@@ -1,3 +1,8 @@
+parameters:
+    - name: "debug"
+      displayName: "Debug Variables"
+      type: boolean
+      default: false
 variables:
     CDP_DEFINITION_BUILD_COUNT: $[counter('', 0)] # needed for onebranch.pipeline.version task https://aka.ms/obpipelines/versioning
     LinuxContainerImage: "mcr.microsoft.com/onebranch/cbl-mariner/build:2.0" # Docker image which is used to build the project https://aka.ms/obpipelines/containers
@@ -43,6 +48,7 @@ extends:
                             - "onPageLoad"
                             - "pop"
                             - "customizable-e2e-test"
+                        debug: ${{ parameters.debug }}
                   - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_node"
@@ -61,6 +67,7 @@ extends:
                             - "silent-flow"
                             - "b2c-user-flows"
                             # - "on-behalf-of"
+                        debug: ${{ parameters.debug }}
                   - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_react"
@@ -75,6 +82,7 @@ extends:
                             - "react-router-sample"
                             - "typescript-sample"
                             - "b2c-sample"
+                        debug: ${{ parameters.debug }}
                   - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_angular"
@@ -90,3 +98,4 @@ extends:
                             - "angular-b2c-sample-app"
                             - "angular-standalone-sample"
                             - "angular17-standalone-sample"
+                        debug: ${{ parameters.debug }}
