Use windows pools for e2e tests

--- a/.pipelines/3p-e2e.yml
+++ b/.pipelines/3p-e2e.yml
@@ -22,7 +22,7 @@ resources:
         - repository: 1P
           type: git
           name: IDDP/msal-javascript-1p
-          ref: master
+          ref: migrate-npm-feed
 extends:
     template: v2/OneBranch.NonOfficial.CrossPlat.yml@templates # https://aka.ms/obpipelines/templates
     parameters:
@@ -38,7 +38,7 @@ extends:
                     parameters:
                         jobName: "validate_msal_browser"
                         targetLib: "msal-browser"
-                        poolType: "linux"
+                        poolType: "windows"
                         stage: "CI"
                         sourceRepo: ${{ variables.sourceRepo }}
                         sourceBranch: ${{ variables.sourceBranch }}
@@ -72,7 +72,7 @@ extends:
                     parameters:
                         jobName: "validate_msal_react"
                         targetLib: "msal-react"
-                        poolType: "linux"
+                        poolType: "windows"
                         stage: "CI"
                         sourceRepo: ${{ variables.sourceRepo }}
                         sourceBranch: ${{ variables.sourceBranch }}
@@ -87,7 +87,7 @@ extends:
                     parameters:
                         jobName: "validate_msal_angular"
                         targetLib: "msal-angular"
-                        poolType: "linux"
+                        poolType: "windows"
                         stage: "CI"
                         sourceRepo: ${{ variables.sourceRepo }}
                         sourceBranch: ${{ variables.sourceBranch }}
