--- a/samples/msal-node-samples/auth-code-distributed-cache/package.json
+++ b/samples/msal-node-samples/auth-code-distributed-cache/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "clean": "rimraf ./build",
-    "build": "npm run clean && tsc",
+    "build": "tsc",
     "start": "node src/app.ts",
     "dev": "ts-node src/app.ts",
     "dev:watch": "nodemon src/app.ts -e ts,json --exec 'npm run dev'"
@@ -18,12 +17,11 @@
     "@types/node": "^18.14.1",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
-    "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@azure/msal-node": "^1.15.0",
+    "@azure/msal-node": "^2.1.0",
     "axios": "^1.7.4",
     "connect-redis": "^7.0.0",
     "express": "^4.19.2",
