--- a/samples/msal-node-samples/client-credentials-distributed-cache/package.json
+++ b/samples/msal-node-samples/client-credentials-distributed-cache/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf ./build",
-    "build": "npm run clean && tsc",
+    "build": "tsc",
     "start": "node src",
     "dev": "ts-node src",
     "dev:watch": "nodemon src -e ts, json --exec 'npm run dev'"
@@ -16,7 +15,6 @@
     "@types/node": "^18.14.1",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
-    "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
