--- a/samples/msal-node-samples/on-behalf-of-distributed-cache/package.json
+++ b/samples/msal-node-samples/on-behalf-of-distributed-cache/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "clean": "rimraf ./build",
-    "build": "npm run clean && tsc",
+    "build": "tsc",
     "start": "node src/app.ts",
     "dev": "ts-node src/app.ts",
     "dev:watch": "nodemon src/app.ts -e ts,json --exec 'npm run dev'"
@@ -18,7 +17,6 @@
     "@types/node": "^18.14.1",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
-    "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
