--- a/.pipelines/3p-e2e.yml
+++ b/.pipelines/3p-e2e.yml
@@ -3,6 +3,10 @@ parameters:
       displayName: "Debug Variables"
       type: boolean
       default: false
+    - name: "maxParallel"
+        displayName: "Maximum number of parallel jobs"
+        type: number
+        default: 0
 variables:
     CDP_DEFINITION_BUILD_COUNT: $[counter('', 0)] # needed for onebranch.pipeline.version task https://aka.ms/obpipelines/versioning
     LinuxContainerImage: "mcr.microsoft.com/onebranch/cbl-mariner/build:2.0" # Docker image which is used to build the project https://aka.ms/obpipelines/containers
@@ -49,6 +53,7 @@ extends:
                             - "pop"
                             - "customizable-e2e-test"
                         debug: ${{ parameters.debug }}
+                        maxParallel: ${{ parameters.maxParallel }}
                   - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_node"
@@ -68,6 +73,7 @@ extends:
                             - "b2c-user-flows"
                             # - "on-behalf-of"
                         debug: ${{ parameters.debug }}
+                        maxParallel: ${{ parameters.maxParallel }}
                   - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_react"
@@ -83,6 +89,7 @@ extends:
                             - "typescript-sample"
                             - "b2c-sample"
                         debug: ${{ parameters.debug }}
+                        maxParallel: ${{ parameters.maxParallel }}
                   - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_angular"
