--- a/lib/msal-common/package.json
+++ b/lib/msal-common/package.json
@@ -22,16 +22,20 @@
     "oauth"
   ],
   "sideEffects": false,
-  "main": "./dist/index.cjs",
+  "type": "module",
+  "main": "./lib/msal-common.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "module": "./dist/index.mjs",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist.index.mjs"
+      },
+      "require": {
+        "types": "./lib/types/index.d.ts",
+        "default": "./lib/msal-common.cjs"
+      }
     },
     "./package.json": "./package.json"
   },
@@ -43,6 +47,7 @@
   },
   "files": [
     "dist",
+    "lib",
     "src"
   ],
   "scripts": {
@@ -95,5 +100,8 @@
     "tslib": "^1.10.0",
     "typescript": "^4.9.5",
     "yargs": "^17.5.1"
+  },
+  "dependencies": {
+    "rollup-msal": "file:../../shared-configs/rollup-msal"
   }
 }
