--- a/lib/msal-common/package.json
+++ b/lib/msal-common/package.json
@@ -30,7 +30,7 @@
     ".": {
       "import": {
         "types": "./dist/index.d.ts",
-        "default": "./dist.index.mjs"
+        "default": "./dist/index.mjs"
       },
       "require": {
         "types": "./lib/types/index.d.ts",
@@ -93,6 +93,7 @@
     "prettier": "2.8.7",
     "rimraf": "^3.0.2",
     "rollup": "^3.14.0",
+    "rollup-msal": "file:../../shared-configs/rollup-msal",
     "shx": "^0.3.2",
     "sinon": "^7.5.0",
     "ts-jest": "^29.1.0",
@@ -100,8 +101,5 @@
     "tslib": "^1.10.0",
     "typescript": "^4.9.5",
     "yargs": "^17.5.1"
-  },
-  "dependencies": {
-    "rollup-msal": "file:../../shared-configs/rollup-msal"
   }
 }
