--- a/lib/msal-node/package.json
+++ b/lib/msal-node/package.json
@@ -22,21 +22,25 @@
     "oauth"
   ],
   "type": "module",
-  "main": "dist/index.cjs",
+  "main": "lib/msal-node.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "module": "./dist/index.mjs",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./lib/types/index.d.ts",
+        "default": "./lib/msal-node.cjs"
+      }
     },
     "./package.json": "./package.json"
   },
   "files": [
     "dist",
+    "lib",
     "src"
   ],
   "scripts": {
@@ -72,6 +76,7 @@
     "jest": "^29.5.0",
     "prettier": "2.8.7",
     "rollup": "^3.20.1",
+    "rollup-msal": "file:../../shared-configs/rollup-msal",
     "sinon": "^7.5.0",
     "ts-jest": "^29.1.0",
     "tslib": "^1.10.0",
