--- a/extensions/msal-node-extensions/package.json
+++ b/extensions/msal-node-extensions/package.json
@@ -6,15 +6,20 @@
     "url": "https://github.com/AzureAD/microsoft-authentication-library-for-js.git"
   },
   "license": "MIT",
+  "type": "module",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "main": "lib/msal-node-extensions.cjs",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "module": "./dist/index.mjs",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./lib/types/index.d.ts",
+        "default": "./lib/msal-node-extensions.cjs"
+      }
     },
     "./package.json": "./package.json"
   },
@@ -28,7 +33,8 @@
   ],
   "files": [
     "dist",
-    "bin"
+    "bin",
+    "lib"
   ],
   "engines": {
     "node": ">=16"
@@ -36,7 +42,7 @@
   "scripts": {
     "compile": "node-gyp rebuild",
     "install": "exit 0",
-    "clean": "shx rm -rf dist bin",
+    "clean": "shx rm -rf dist bin lib",
     "build": "npm run clean && rollup -c --strictDeprecations --bundleConfigAsCjs && node ./scripts/buildBinaries.cjs",
     "build:all": "cd ../.. && npm run build --workspace=@azure/msal-common --workspace=@azure/msal-node-extensions",
     "test": "jest",
@@ -71,6 +77,7 @@
     "jest": "^29.5.0",
     "node-addon-api": "^6.1.0",
     "rollup": "^3.20.2",
+    "rollup-msal": "file:../../shared-configs/rollup-msal",
     "shx": "^0.3.4",
     "ts-jest": "^29.1.0",
     "ts-jest-mock-import-meta": "^1.1.0",
