--- a/samples/msal-react-samples/typescript-sample/package.json
+++ b/samples/msal-react-samples/typescript-sample/package.json
@@ -13,10 +13,10 @@
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
         "@types/react-router-dom": "^5.1.7",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.7.0",
-        "react-scripts": "5.0.1",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^6.26.1",
+        "react-scripts": "^5.0.1",
         "typescript": "^4.9.4"
     },
     "scripts": {
@@ -51,5 +51,5 @@
         "suiteNameTemplate": "TypeScript Sample Tests",
         "outputDirectory": ".",
         "outputName": "test-results.xml"
-      }
+    }
 }
