--- a/samples/msal-react-samples/b2c-sample/package.json
+++ b/samples/msal-react-samples/b2c-sample/package.json
@@ -9,9 +9,9 @@
         "@emotion/styled": "^11.9.3",
         "@mui/icons-material": "^5.8.4",
         "@mui/material": "^5.9.0",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
-        "react-router-dom": "^6.7.0"
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^6.26.1"
     },
     "devDependencies": {
         "@azure/msal-common": "^14.7.0",
@@ -20,7 +20,7 @@
         "e2e-test-utils": "file:../../e2eTestUtils",
         "jest": "^29.5.0",
         "jest-junit": "^16.0.0",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
         "ts-jest": "^29.1.0"
     },
     "scripts": {
