--- a/extensions/msal-node-extensions/package.json
+++ b/extensions/msal-node-extensions/package.json
@@ -81,6 +81,7 @@
     "shx": "^0.3.4",
     "ts-jest": "^29.1.0",
     "ts-jest-mock-import-meta": "^1.1.0",
+    "ts-jest-resolver": "^2.0.1",
     "tslib": "^2.0.0",
     "typescript": "^4.9.5"
   }
