--- a/lib/msal-browser/package.json
+++ b/lib/msal-browser/package.json
@@ -99,7 +99,8 @@
     "shx": "^0.3.2",
     "sinon": "^7.5.0",
     "ssri": "^8.0.1",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.2.5",
+    "ts-jest-resolver": "^2.0.1",
     "tslib": "^1.10.0",
     "typescript": "^4.9.5"
   },
