--- a/lib/msal-common/package.json
+++ b/lib/msal-common/package.json
@@ -97,6 +97,7 @@
     "shx": "^0.3.2",
     "sinon": "^7.5.0",
     "ts-jest": "^29.1.0",
+    "ts-jest-resolver": "^2.0.1",
     "ts-node": "^10.9.1",
     "tslib": "^1.10.0",
     "typescript": "^4.9.5",
