--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -77,6 +77,7 @@
     "react-dom": "^18.2.0",
     "rollup": "^4.9.6",
     "ts-jest": "^29.1.0",
+    "ts-jest-resolver": "^2.0.1",
     "tslib": "^2.0.0",
     "typescript": "^4.9.5"
   }
