--- a/samples/msal-node-samples/client-credentials-with-cert-from-key-vault/package.json
+++ b/samples/msal-node-samples/client-credentials-with-cert-from-key-vault/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "^2.0.0-beta.0"
+    "@azure/msal-node": "^2.13.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
