--- a/.pipelines/3p-e2e.yml
+++ b/.pipelines/3p-e2e.yml
@@ -63,6 +63,7 @@ extends:
                             - "auth-code"
                             - "auth-code-cli-app"
                             - "client-credentials"
+                            - "client-credentials-with-cert-from-key-vault"
                             - "device-code"
                             - "silent-flow"
                             - "b2c-user-flows"
