--- a/.pipelines/3p-e2e.yml
+++ b/.pipelines/3p-e2e.yml
@@ -3,6 +3,13 @@ parameters:
       displayName: "Debug Variables"
       type: boolean
       default: false
+    - name: "poolType"
+      displayName: "Pool Type"
+      type: string
+      default: "windows"
+      values:
+        - "windows"
+        - "linux"
 variables:
     CDP_DEFINITION_BUILD_COUNT: $[counter('', 0)] # needed for onebranch.pipeline.version task https://aka.ms/obpipelines/versioning
     LinuxContainerImage: "mcr.microsoft.com/onebranch/cbl-mariner/build:2.0" # Docker image which is used to build the project https://aka.ms/obpipelines/containers
@@ -38,7 +45,7 @@ extends:
                     parameters:
                         jobName: "validate_msal_browser"
                         targetLib: "msal-browser"
-                        poolType: "windows"
+                        poolType: ${{ parameters.poolType }}
                         stage: "CI"
                         sourceRepo: ${{ variables.sourceRepo }}
                         sourceBranch: ${{ variables.sourceBranch }}
@@ -53,7 +60,7 @@ extends:
                     parameters:
                         jobName: "validate_msal_node"
                         targetLib: "msal-node"
-                        poolType: "windows"
+                        poolType: ${{ parameters.poolType }}
                         stage: "CI"
                         sourceRepo: ${{ variables.sourceRepo }}
                         sourceBranch: ${{ variables.sourceBranch }}
@@ -72,7 +79,7 @@ extends:
                     parameters:
                         jobName: "validate_msal_react"
                         targetLib: "msal-react"
-                        poolType: "windows"
+                        poolType: ${{ parameters.poolType }}
                         stage: "CI"
                         sourceRepo: ${{ variables.sourceRepo }}
                         sourceBranch: ${{ variables.sourceBranch }}
@@ -87,7 +94,7 @@ extends:
                     parameters:
                         jobName: "validate_msal_angular"
                         targetLib: "msal-angular"
-                        poolType: "windows"
+                        poolType: ${{ parameters.poolType }}
                         stage: "CI"
                         sourceRepo: ${{ variables.sourceRepo }}
                         sourceBranch: ${{ variables.sourceBranch }}
