--- a/.pipelines/3p-e2e.yml
+++ b/.pipelines/3p-e2e.yml
@@ -10,6 +10,23 @@ parameters:
       values:
         - "windows"
         - "linux"
+    - name: "runBrowserTests"
+      displayName: "Run Browser Tests"
+      type: boolean
+      default: true
+    - name: "runNodeTests"
+      displayName: "Run Node Tests"
+      type: boolean
+      default: true
+    - name: "runReactTests"
+      displayName: "Run React Tests"
+      type: boolean
+      default: true
+    - name: "runAngularTests"
+      displayName: "Run Angular Tests"
+      type: boolean
+      default: true
+
 variables:
     CDP_DEFINITION_BUILD_COUNT: $[counter('', 0)] # needed for onebranch.pipeline.version task https://aka.ms/obpipelines/versioning
     LinuxContainerImage: "mcr.microsoft.com/onebranch/cbl-mariner/build:2.0" # Docker image which is used to build the project https://aka.ms/obpipelines/containers
@@ -41,6 +58,7 @@ extends:
             - stage: e2e_test
               displayName: "3P E2E Tests"
               jobs:
+                - ${{ if eq(parameters.runBrowserTests, true) }}:
                   - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_browser"
@@ -56,6 +74,7 @@ extends:
                             - "pop"
                             - "customizable-e2e-test"
                         debug: ${{ parameters.debug }}
+                - ${{ if eq(parameters.runNodeTests, true) }}:
                   - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_node"
@@ -75,6 +94,7 @@ extends:
                             - "b2c-user-flows"
                             # - "on-behalf-of"
                         debug: ${{ parameters.debug }}
+                - ${{ if eq(parameters.runReactTests, true) }}:
                   - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_react"
@@ -90,6 +110,7 @@ extends:
                             - "typescript-sample"
                             - "b2c-sample"
                         debug: ${{ parameters.debug }}
+                - ${{ if eq(parameters.runAngularTests, true) }}:
                   - template: .pipelines/templates/e2e-tests.yml@1P
                     parameters:
                         jobName: "validate_msal_angular"
