Add missing 1p samples

--- a/.pipelines/1p-e2e.yml
+++ b/.pipelines/1p-e2e.yml
@@ -55,4 +55,6 @@ extends:
                         samples:
                             - "Broker_WAMTestApp"
                             - "PerformanceTelemetrySample"
+                            - "BrokerTestApp-React"
+                            - "BrokerSingleFrameTestApp"
                         debug: ${{ parameters.debug }}
